BP-2496: fix word wrap for university name

--- a/app/blocks/n-university/l-university/l-university.scss
+++ b/app/blocks/n-university/l-university/l-university.scss
@@ -72,6 +72,8 @@
 .l-university__name {
     margin-bottom: 12px;
 
+    word-wrap: break-word;
+
     font-family: 'Proxima', Arial, sans-serif;
     font-size: 36.3px;
     font-weight: 700;
